--- a/Home/index.html
+++ b/Home/index.html
@@ -9,8 +9,8 @@
 	</head>
 	<body>
 		<div class="nav-section">
-			<h1>logo</h1>
-			<ul>
+			<h1 class="nav-logo">logo</h1>
+			<ul class="navs-btn">
 				<li>DVBS</li>
 				<li>MINISTRIES</li>
 				<li>ABOUT US</li>
