--- a/Home/index.html
+++ b/Home/index.html
@@ -19,5 +19,26 @@
 				<li>FAQS</li>
 			</ul>
 		</div>
+
+		<div class="home-hero-section">
+			<div class="home-connect-links">
+				<ul class="connect-links">
+					<li>Instagram</li>
+					<li>Facebook</li>
+					<li>Whatsapp</li>
+					<li>Youtube</li>
+					<li>Help</li>
+				</ul>
+				<h4 class="connect-text">TALK TO US</h4>
+				<p class="connect-email">@talantaministriesinte!</p>
+			</div>
+			<div class="home-title">
+				<h1 class="the-title">TALANTA MINISTRIES INTERNATIONAL</h1>
+				<button class="get-started">GET STARTED</button>
+			</div>
+			<div class="home-subtext">
+				<h3 class="go-ye">GO YE</h3>
+			</div>
+		</div>
 	</body>
 </html>
