--- a/Home/index.html
+++ b/Home/index.html
@@ -15,8 +15,18 @@
 		<div class="nav-section">
 			<h1 class="nav-logo">logo</h1>
 			<ul class="navs-btn">
-				<li>DVBS</li>
-				<li>MINISTRIES</li>
+				<li>
+					<a link href="../Dvbs/dvbs.html" rel="DVBS" target="_blank">DVBS</a>
+				</li>
+				<li>
+					<a
+						link
+						href="../Ministries/ministries.html"
+						rel="DVBS"
+						target="_blank"
+						>MINISTRIES</a
+					>
+				</li>
 				<li>ABOUT US</li>
 				<li>NEWS</li>
 				<li>MORE</li>
