feat:get started

--- a/Home/index.html
+++ b/Home/index.html
@@ -6,53 +6,63 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Talanta Ministries</title>
 		<link rel="stylesheet" href="style.css" />
+		<script
+			src="https://kit.fontawesome.com/30a3a8d5d9.js"
+			crossorigin="anonymous"
+		></script>
 		<link
 			rel="stylesheet"
 			href="path/to/font-awesome/css/font-awesome.min.css"
 		/>
 	</head>
 	<body>
-		<div class="nav-section">
-			<h1 class="nav-logo">logo</h1>
-			<ul class="navs-btn">
-				<li>
-					<a link href="../Dvbs/dvbs.html" rel="DVBS" target="_blank">DVBS</a>
-				</li>
-				<li>
-					<a
-						link
-						href="../Ministries/ministries.html"
-						rel="DVBS"
-						target="_blank"
-						>MINISTRIES</a
-					>
-				</li>
-				<li>ABOUT US</li>
-				<li>NEWS</li>
-				<li>MORE</li>
-				<li>FAQS</li>
-			</ul>
-		</div>
-
-		<div class="home-hero-section">
+		<header>
+			<div class="nav-section">
+				<h1 class="nav-logo">logo</h1>
+				<ul class="navs-btn">
+					<li>
+						<a link href="../Dvbs/dvbs.html" rel="DVBS" target="_blank">DVBS</a>
+					</li>
+					<li>
+						<a
+							link
+							href="../Ministries/ministries.html"
+							rel="DVBS"
+							target="_blank"
+							>MINISTRIES</a
+						>
+					</li>
+					<li>ABOUT US</li>
+					<li>NEWS</li>
+					<li>MORE</li>
+					<li>FAQS</li>
+				</ul>
+			</div>
+		</header>
+		<main>
+			<div class="home-hero-section">
+				<div class="home-title">
+					<h1 class="the-title">TALANTA MINISTRIES INTERNATIONAL</h1>
+					<button class="get-started">GET STARTED</button>
+				</div>
+			</div>
+		</main>
+		<footer>
 			<div class="home-connect-links">
 				<ul class="connect-links">
-					<li>Instagram</li>
-					<li>Facebook</li>
-					<li>Whatsapp</li>
-					<li>Youtube</li>
-					<li>Help</li>
+					<i class="fa fa-instagram" aria-hidden="true"></i>
+					<i class="fa fa-whatsapp" aria-hidden="true"></i>
+					<i class="fa fa-facebook-square" aria-hidden="true"></i>
+					<i class="fa fa-youtube-play" aria-hidden="true"></i>
+					<i class="fa fa-info-circle" aria-hidden="true"></i>
 				</ul>
 				<h4 class="connect-text">TALK TO US</h4>
 				<p class="connect-email">@talantaministriesinte!</p>
 			</div>
-			<div class="home-title">
-				<h1 class="the-title">TALANTA MINISTRIES INTERNATIONAL</h1>
-				<button class="get-started">GET STARTED</button>
-			</div>
+			<h3>COPYRIGHT 2023 &copy;</h3>
 			<div class="home-subtext">
 				<h3 class="go-ye">GO YE</h3>
 			</div>
-		</div>
+		</footer>
 	</body>
 </html>
