--- a/Home/index.html
+++ b/Home/index.html
@@ -50,11 +50,11 @@
 		<footer>
 			<div class="home-connect-links">
 				<ul class="connect-links">
-					<i class="fa fa-instagram" aria-hidden="true"></i>
-					<i class="fa fa-whatsapp" aria-hidden="true"></i>
-					<i class="fa fa-facebook-square" aria-hidden="true"></i>
-					<i class="fa fa-youtube-play" aria-hidden="true"></i>
-					<i class="fa fa-info-circle" aria-hidden="true"></i>
+					<i class="fa fa-instagram fa-4x" aria-hidden="true"></i>
+					<i class="fa fa-whatsapp fa-4x" aria-hidden="true"></i>
+					<i class="fa fa-facebook-square fa-4x" aria-hidden="true"></i>
+					<i class="fa fa-youtube-play fa-4x" aria-hidden="true"></i>
+					<i class="fa fa-info-circle fa-4x" aria-hidden="true"></i>
 				</ul>
 				<h4 class="connect-text">TALK TO US</h4>
 				<p class="connect-email">@talantaministriesinte!</p>
