--- a/Home/index.html
+++ b/Home/index.html
@@ -18,7 +18,7 @@
 	<body>
 		<header>
 			<div class="nav-section">
-				<h1 class="nav-logo">logo</h1>
+				<img src="logo.jpg" class="nav-logo" />
 				<ul class="navs-btn">
 					<li>
 						<a link href="../Dvbs/dvbs.html" rel="DVBS" target="_blank">DVBS</a>
