feat: added padding

--- a/Home/index.html
+++ b/Home/index.html
@@ -59,7 +59,7 @@
 				<h4 class="connect-text">TALK TO US</h4>
 				<p class="connect-email">@talantaministriesinte!</p>
 			</div>
-			<h3>COPYRIGHT 2023 &copy;</h3>
+			<!-- <h3>COPYRIGHT 2023 &copy;</h3> -->
 			<div class="home-subtext">
 				<h3 class="go-ye">GO YE</h3>
 			</div>
