feat:added media query

--- a/Home/index.html
+++ b/Home/index.html
@@ -20,18 +20,8 @@
 			<div class="nav-section">
 				<img src="logo.jpg" class="nav-logo" />
 				<ul class="navs-btn">
-					<li>
-						<a link href="../Dvbs/dvbs.html" rel="DVBS" target="_blank">DVBS</a>
-					</li>
-					<li>
-						<a
-							link
-							href="../Ministries/ministries.html"
-							rel="DVBS"
-							target="_blank"
-							>MINISTRIES</a
-						>
-					</li>
+					<li>DVBS</li>
+					<li>MINISTRIES</li>
 					<li>ABOUT US</li>
 					<li>NEWS</li>
 					<li>MORE</li>
