feat:added media query

--- a/Home/index.html
+++ b/Home/index.html
@@ -19,6 +19,9 @@
 		<header>
 			<div class="nav-section">
 				<img src="logo.jpg" class="nav-logo" />
+				<div class="humberger">
+					<i class="fa fa-bars" aria-hidden="true"></i>
+				</div>
 				<ul class="navs-btn">
 					<li>DVBS</li>
 					<li>MINISTRIES</li>
