--- a/Home/index.html
+++ b/Home/index.html
@@ -19,8 +19,11 @@
 		<header>
 			<div class="nav-section">
 				<img src="logo.jpg" class="nav-logo" />
-				<div class="humberger">
+				<div class="openBtn">
 					<i class="fa fa-bars" aria-hidden="true"></i>
+				</div>
+				<div class="closeBtn">
+					<i class="fa fa-times" aria-hidden="true"></i>
 				</div>
 				<ul class="navs-btn">
 					<li>DVBS</li>
@@ -57,5 +60,6 @@
 				<h3 class="go-ye">GO YE</h3>
 			</div>
 		</footer>
+		<script src="home.js"></script>
 	</body>
 </html>
