added open and close button

--- a/Home/index.html
+++ b/Home/index.html
@@ -28,7 +28,16 @@
 					<i class="fa fa-times" aria-hidden="true"></i>
 				</div>
 				<ul class="navs-btn">
-					<li>DVBS</li>
+					<li>
+						<a href="#">DVBS</a>
+						<ul class="dvbs-dropdown">
+							<li>class 1</li>
+							<li>class 2</li>
+							<li>class 3</li>
+							<li>class 4</li>
+						</ul>
+					</li>
+
 					<li>MINISTRIES</li>
 					<li>ABOUT US</li>
 					<li>NEWS</li>
