added open and close button

--- a/Home/index.html
+++ b/Home/index.html
@@ -30,19 +30,59 @@
 				<ul class="navs-btn">
 					<li>
 						<a href="#">DVBS</a>
-						<ul class="dvbs-dropdown">
+						<ul class="dropdown">
+							<li>Monday</li>
+							<li>Tuesday</li>
+							<li>Wednesday</li>
+							<li>Thursday</li>
+						</ul>
+					</li>
+
+					<li>
+						<a href="#">MINISTRIES</a>
+						<ul class="dropdown">
 							<li>class 1</li>
 							<li>class 2</li>
 							<li>class 3</li>
 							<li>class 4</li>
 						</ul>
 					</li>
-
-					<li>MINISTRIES</li>
-					<li>ABOUT US</li>
-					<li>NEWS</li>
-					<li>MORE</li>
-					<li>FAQS</li>
+					<li>
+						<a href="#">ABOUT US</a>
+						<ul class="dropdown">
+							<li>class 1</li>
+							<li>class 2</li>
+							<li>class 3</li>
+							<li>class 4</li>
+						</ul>
+					</li>
+					<li>
+						<a href="#">NEWS</a>
+						<ul class="dropdown">
+							<li>class 1</li>
+							<li>class 2</li>
+							<li>class 3</li>
+							<li>class 4</li>
+						</ul>
+					</li>
+					<li>
+						<a href="#">MORE</a>
+						<ul class="dropdown">
+							<li>class 1</li>
+							<li>class 2</li>
+							<li>class 3</li>
+							<li>class 4</li>
+						</ul>
+					</li>
+					<li>
+						<a href="#">FAQS</a>
+						<ul class="dropdown faqs">
+							<li>class 1</li>
+							<li>class 2</li>
+							<li>class 3</li>
+							<li>class 4</li>
+						</ul>
+					</li>
 				</ul>
 			</div>
 		</header>
