added open and close button

--- a/Home/index.html
+++ b/Home/index.html
@@ -67,21 +67,21 @@
 					</li>
 					<li>
 						<a href="#">MORE</a>
-						<ul class="dropdown">
+						<!-- <ul class="dropdown">
 							<li>class 1</li>
 							<li>class 2</li>
 							<li>class 3</li>
 							<li>class 4</li>
-						</ul>
+						</ul> -->
 					</li>
 					<li>
 						<a href="#">FAQS</a>
-						<ul class="dropdown faqs">
+						<!-- <ul class="dropdown faqs">
 							<li>class 1</li>
 							<li>class 2</li>
 							<li>class 3</li>
 							<li>class 4</li>
-						</ul>
+						</ul> -->
 					</li>
 				</ul>
 			</div>
