--- a/Home/index.html
+++ b/Home/index.html
@@ -90,7 +90,9 @@
 			<div class="home-hero-section">
 				<div class="home-title">
 					<h1 class="the-title">TALANTA MINISTRIES INTERNATIONAL</h1>
-					<button class="get-started">GET STARTED</button>
+					<button class="get-started">
+						<a href="../Dvbs/dvbs.html" ref="dvbs-page">GET STARTED</a>
+					</button>
 				</div>
 			</div>
 		</main>
