--- a/Home/index.html
+++ b/Home/index.html
@@ -91,7 +91,7 @@
 				<div class="home-title">
 					<h1 class="the-title">TALANTA MINISTRIES INTERNATIONAL</h1>
 					<button class="get-started">
-						<a href="../Dvbs/dvbs.html" ref="dvbs-page">GET STARTED</a>
+						<a href="../Dvbs/dvbs.html" target="_blank">GET STARTED</a>
 					</button>
 				</div>
 			</div>
