--- a/Dvbs/dvbs.html
+++ b/Dvbs/dvbs.html
@@ -7,6 +7,8 @@
 		<title>DVBS</title>
 	</head>
 	<body>
-		HELLO
+		<div class="dbvbs-container">
+			<div class="dvbs-news"></div>
+		</div>
 	</body>
 </html>
