--- a/Home/index.html
+++ b/Home/index.html
@@ -75,7 +75,7 @@
 						</ul> -->
 					</li>
 					<li>
-						<a href="#">FAQS</a>
+						<a href="../Faqs/faqs.html" target="_blank">FAQS</a>
 						<!-- <ul class="dropdown faqs">
 							<li>class 1</li>
 							<li>class 2</li>
