feat:add dvbs page; add faqs page

--- a/Home/index.html
+++ b/Home/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Talanta Ministries</title>
 		<link rel="stylesheet" href="style.css" />
-		<link rel="icon" type="image/png" href="logo.jpg" />
+		<link rel="icon" type="image/png" href="../Home/logo.jpg" />
 		<script
 			src="https://kit.fontawesome.com/30a3a8d5d9.js"
 			crossorigin="anonymous"
