--- a/Dvbs/dvbs.html
+++ b/Dvbs/dvbs.html
@@ -5,53 +5,36 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>DVBS</title>
+		<link rel="icon" type="image/png" href="../Home/logo.jpg" />
 		<link rel="stylesheet" href="dvbs.css" />
 	</head>
 	<body>
 		<div class="dvbs-container">
 			<div class="dvbs-left-side">
 				<div class="dvbs-news">
-					Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus rerum
-					sequi dolorum. In excepturi exercitationem temporibus saepe, dolor
-					velit consequuntur deserunt maiores tenetur! Sint iusto quisquam
-					consequatur ea natus? Magni.
+					<img src="dvbs-images/banner.jpg" width="100%" />
 				</div>
 				<div class="dvbs-prayer">
-					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia
-					quasi quod minus voluptate, vitae inventore veritatis culpa eligendi
-					itaque aut excepturi nihil quis, eveniet illum dolores laboriosam!
-					Possimus, dolor sit.
+					<img src="dvbs-images/bible.png" width="100%" />
 				</div>
-				<div class="dvbs-coming-soon"></div>
+				<div class="dvbs-coming-soon">
+					<img src="dvbs-images/bible.png" width="100%" />
+				</div>
 			</div>
 			<div class="dvbs-center-side">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro
-				voluptate numquam sed qui, optio eum fugit temporibus nulla eius quam,
-				minus voluptatem commodi similique vitae facere molestias ipsa repellat
-				ut.
 				<div class="dvbs-main-page">
-					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam, ex
-					veritatis. Eius culpa eligendi id expedita modi ab perferendis quas
-					recusandae. Accusamus sed eius repellat sapiente nobis eligendi, iusto
-					itaque!
+					<img src="dvbs-images/code.jpeg" width="100%" />
 				</div>
 			</div>
 			<div class="dvbs-right-side">
 				<div class="dvbs-now-jesus">
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nam
-					ipsum nisi, vitae neque debitis ad dolor repellat consectetur magni
-					ea, ipsam quo voluptatum ullam ipsa quas facilis odio eum?
+					<img src="dvbs-images/banner.jpg" width="100%" />
 				</div>
 				<div class="dvbs-ministries">
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, facilis
-					fugiat? Perferendis, dolorem! Et rem non enim temporibus quo, minima
-					iste dolorum ut consequatur possimus est, aspernatur sed iusto ipsa.
+					<img src="dvbs-images/bible.png" width="100%" />
 				</div>
 				<div class="dvbs-bible-reading">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio
-					assumenda saepe ab recusandae, laboriosam ut culpa aut quae repellat,
-					unde itaque sequi voluptate? Tempore a at, in sapiente incidunt
-					nostrum.
+					<img src="dvbs-images/banner.jpg" width="100%" />
 				</div>
 			</div>
 		</div>
