--- a/Home/index.html
+++ b/Home/index.html
@@ -99,11 +99,21 @@
 		<footer>
 			<div class="home-connect-links">
 				<ul class="connect-links">
-					<i class="fa fa-instagram fa-4x" aria-hidden="true"></i>
-					<i class="fa fa-whatsapp fa-4x" aria-hidden="true"></i>
-					<i class="fa fa-facebook-square fa-4x" aria-hidden="true"></i>
-					<i class="fa fa-youtube-play fa-4x" aria-hidden="true"></i>
-					<i class="fa fa-info-circle fa-4x" aria-hidden="true"></i>
+					<a href="https://www.instagram.com/" target="_blank"
+						><i class="fa fa-instagram fa-4x" aria-hidden="true"></i
+					></a>
+					<a href="https://web.whatsapp.com/" target="_blank"
+						><i class="fa fa-whatsapp fa-4x" aria-hidden="true"></i
+					></a>
+					<a href="https://www.facebook.com/" target="_blank"
+						><i class="fa fa-facebook-square fa-4x" aria-hidden="true"></i
+					></a>
+					<a href="https://www.youtube.com/" target="_blank"
+						><i class="fa fa-youtube-play fa-4x" aria-hidden="true"></i
+					></a>
+					<a href="https://github.com/jmngandu/" target="_blank"
+						><i class="fa fa-info-circle fa-4x" aria-hidden="true"></i
+					></a>
 				</ul>
 				<h4 class="connect-text">TALK TO US</h4>
 				<p class="connect-email">@talantaministriesinte!</p>
