--- a/Home/index.html
+++ b/Home/index.html
@@ -41,10 +41,20 @@
 					<li>
 						<a href="#">MINISTRIES</a>
 						<ul class="dropdown">
-							<li>class 1</li>
-							<li>class 2</li>
-							<li>class 3</li>
-							<li>class 4</li>
+							<li>Childrens Ministry</li>
+							<li>Couple's Ministry</li>
+							<li>Womens Ministry</li>
+							<li>Men's Ministry</li>
+							<li>Youth Ministry</li>
+							<li>Teens Ministry</li>
+							<li>Young professionals</li>
+							<li>Missions Ministry</li>
+							<li>Ushering and hospitality Ministry</li>
+							<li>Intercessory Ministry</li>
+							<li>Worship Ministry</li>
+							<li>Outreach and evangelism Ministry</li>
+							<li>Visitation Ministry</li>
+							<li>Discipleship Ministry</li>
 						</ul>
 					</li>
 					<li>
@@ -67,12 +77,14 @@
 					</li>
 					<li>
 						<a href="#">MORE</a>
-						<!-- <ul class="dropdown">
-							<li>class 1</li>
-							<li>class 2</li>
-							<li>class 3</li>
-							<li>class 4</li>
-						</ul> -->
+						<ul class="dropdown">
+							<li>DVBS</li>
+							<li>News</li>
+							<li>Watch us Live</li>
+							<li>Bible Reading</li>
+							<li>Know Jesus</li>
+							<li>Need a Prayer</li>
+						</ul>
 					</li>
 					<li>
 						<a href="../Faqs/faqs.html" target="_blank">FAQS</a>
